src/objects/VPM_MDMCountry__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>VPM - This custom setting is used to store the MDM Country details.</description>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>VPM - This field is used to store the value of Country code.</description>
        <label>Country Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <description>VPM - This field is used to store the Name of the Country.</description>
        <label>Country Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name_with_Code__c</fullName>
        <description>VPM - This field is used to store the Name of the Country along with the country code.</description>
        <label>Country Name with Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>VPM MDM Country</label>
</CustomObject>